<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                        https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- See https://maven.apache.org/pom.html#pom-reference -->
    <groupId>dizk</groupId>
    <artifactId>dizk</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.12</artifactId>
            <version>[2.4.7,3.0)</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.12</artifactId>
            <version>[2.4.7,3.0)</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <!-- See http://maven.apache.org/surefire/maven-surefire-plugin/examples/junit.html -->
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>[4.13,5.0)</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.googlejavaformat</groupId>
            <artifactId>google-java-format</artifactId>
            <version>[1.9,2.0)</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <source>1.11</source>
                    <target>1.11</target>
                    <debug>true</debug>
                    <debuglevel>lines,vars,source</debuglevel>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <!--
                        Using several threads, with the options:
                        <threadCount>4</threadCount
                        <parallel>methods</parallel>
                        triggers a lot of NullPointer exceptions in the tests.
                        Seems like there are annoying race conditions. This begs for
                        deeper dive into how resource is shared and how tests work when
                        started on multiple threads.
                    -->
                    <!-- 
                        For now, we kill any parallelism and rather use single thread for the test to try and
                        avoid any weird race conditions
                        The config: forkCount=1/reuseForks=false executes each test class in its own JVM process,
                        one after another. It creates the highest level of separation for the test execution,
                        but provides the longest execution time.
                        See: http://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html)
                    -->
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<forkCount>1</forkCount>-->
                    <forkCount>0</forkCount>
                    <!-- Add additional argument to allow reflection
                        access for third party libraries -->
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                  <execution>
                    <id>enforce-maven</id>
                    <goals>
                      <goal>enforce</goal>
                    </goals>
                    <configuration>
                      <rules>
                        <requireMavenVersion>
                          <version>3.6.3</version>
                        </requireMavenVersion>
                      </rules>
                    </configuration>
                  </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
